[package]
name = "romcomp"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = true

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
clap = { version = "4.5.15", features = ["derive"] }
crossbeam-channel = "0.5.13"
ctrlc = "3.4.5"
filesize = "0.2.0"
humansize = "2.1.3"
num_cpus = "1.16.0"
walkdir = "2.5.0"
